# ovea_crates

./: .gitignore  Cargo.toml  build.sh
db_model_utils/: Cargo.toml
sqlite3_utils/: Cargo.toml  Readme.md  Structure.md  build.rs  cbindgen.toml  sqlite3_utils.h
sqlite3_utils/benches/: db_bench.rs
sqlite3_utils/cpp_lib/: CMakeLists.txt
sqlite3_utils/cpp_lib/include/: my_math.h
sqlite3_utils/cpp_lib/src/: my_math.c
sqlite3_utils/examples/c_call_rust/: CMakeLists.txt  main.c
sqlite3_utils/src/: bindings.rs  db_control.rs  ffi.rs  lib.rs
sqlite3_utils/tests/: tests.rs
