[package]
name = "sqlite3_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
# libc provides standard C types
libc = "0.2"

[dev-dependencies]
# Criterion for benchmarking
criterion = "0.5"

[build-dependencies]
cmake = "0.1" # Bridge for running CMake during cargo build

[lib]
# "cdylib" generates a dynamic library for C/C++ to use
# "staticlib" generates a static library
# "rlib" keeps it usable as a standard Rust dependency
# 
# cdylib -> .so (Linux) / .dylib (macOS) / .dll (Windows)
# staticlib -> .a (Unix) / .lib (Windows)
# rlib -> Rust
# 
# cargo build -> target/debug/
# cargo build --release -> target/release/
crate-type = ["cdylib", "staticlib", "rlib"]

[[bench]]
name = "db_bench"
harness = false
